# legal-agent

./: .env_example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
scripts/: build_database.sh
src/legal_agent/: configs.py
src/legal_agent/agents/: modified_system_prompt.txt  rag_agent.py  tools.py
src/legal_agent/configs/: config.yaml
src/legal_agent/data_pipeline/: pipeline.py  sentence_tokenization.py  text_processing.py
src/legal_agent/database/: dataset_info.json  state.json
src/legal_agent/nlp/: embeddings.py  entity_extraction.py  summarization.py
src/legal_agent/prompts/: legal_agents_prompt.py
src/legal_agent/utils/: config_loader.py
tests/: test_data_pipeline.py  test_faiss.py  test_filter_datetime.py  test_filter_entity.py  test_nlp.py  test_summarization.py
