[project]
name = "legal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.3.2",
    "faiss-cpu>=1.10.0",
    "flake8>=7.1.2",
    "isort>=6.0.0",
    "nltk>=3.9.1",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
    "spacy>=3.8.4",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
